[package]
name = "signal_chaos"
version = "0.1.0"
edition = "2021"

[dependencies]
async-scoped = { version = "0.9.0", features = ["tokio", "use-tokio"] }
clap = { version = "4.5.20", features = ["derive", "env"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
libc = "0.2.159"
nix = { version = "0.29.0", features = ["signal"] }
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
